# src/app/data/api/project-service/models/department.ts
@@ -1,7 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface Department {
-  id?: string;
-  name?: string;
-}
-
